@@ -1,3 +1,8 @@
+2007-02-01  Neil Jagdish Patel  <njp@Fedora>
+
+	* src/awn-task-manager.c:
+	* src/awn-task.c: Added effect support.
+
 2007-01-31  Neil Jagdish Patel  <njp@Fedora>
 
 	Experimental support for GObject-based task icons, and initial support forsmart launchers and startup notification.
